--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formspree/react": "^2.3.3",
     "@headlessui/react": "^1.6.6",
+    "daisyui": "^2.24.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
